crates/plotnik-tests/tests/02-parser/recovery_validation/unnamed_def_rejected.txt
(program (identifier) @id)
------------------ DIAGNOSTICS -------------------
error: definition must be named
 --> query.ptk:1:1
  |
1 | (program (identifier) @id)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: give it a name like `Name = (program (identifier) @id)`
